# Ros2-Learning

install/: local_setup.sh  setup.sh
install/my_py_pkg/lib/my_py_pkg/: command_publisher  command_publishger  command_subscriber  compute_service  smart_controller  subscriber_node
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_py_pkg/share/my_py_pkg/launch/: turtle_system.py
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh
install/my_robot_interfaces/share/my_robot_interfaces/cmake/: rosidl_cmake-extras.cmake
install/my_robot_interfaces/share/my_robot_interfaces/msg/: RobotCommand.json
install/smart_robot/lib/smart_robot/: controller_node  sensor_node  speed_service
install/smart_robot/share/smart_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/install/: local_setup.sh  setup.ps1  setup.sh
src/install/my_py_pkg/lib/my_py_pkg/: param_node
src/log/: latest_build
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_server.py  command_subscriber.py  smart_controller.py  subscriber_node.py
src/my_py_pkg/my_py_pkg/install/: local_setup.sh  setup.sh
src/my_py_pkg/my_py_pkg/log/: latest_build
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/my_robot_interfaces/msg/log/: latest_build
src/smart_robot/: setup.py
src/smart_robot/launch/: robot.launch.py
src/smart_robot/smart_robot/: controller_node.py
(+25 files in other folders)
